--- a/App/Podfile
+++ b/App/Podfile
@@ -1,11 +1,11 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
-target 'CheongBit' do
+target 'GOYO' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for CheongBit
+  # Pods for GOYO
 
 # add the Firebase pod for Google Analytics
 pod 'Firebase/Analytics'
