앱 이름 goyo로 변경2

--- a/App/GOYO/GoogleService-Info.plist
+++ b/App/GOYO/GoogleService-Info.plist
@@ -13,21 +13,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>TeamPdf.CheongBit</string>
+	<string>TeamPdf.GOYO</string>
 	<key>PROJECT_ID</key>
 	<string>goyo-pdf</string>
 	<key>STORAGE_BUCKET</key>
 	<string>goyo-pdf.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:296557272623:ios:9651534e01c8c78f9f70da</string>
 </dict>
