주소 api 검색 기능 1차 구현

--- a/App/Podfile
+++ b/App/Podfile
@@ -7,9 +7,7 @@ target 'GOYO' do
 
   # Pods for GOYO
   pod 'Firebase/Analytics'
-
-
-# add pods for desired Firebase products
-# https://firebase.google.com/docs/ios/setup#available-pods
+  pod 'Alamofire'
+  pod 'SwiftyJSON'
 
 end
