--- a/App/GOYO/Info.plist
+++ b/App/GOYO/Info.plist
@@ -6,6 +6,13 @@
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>NanumGothicBold.otf</string>
+		<string>NanumGothic.otf</string>
+		<string>NanumGothicExtraBold.otf</string>
+		<string>NanumGothicLight.otf</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
