--- a/App/GOYO/Info.plist
+++ b/App/GOYO/Info.plist
@@ -22,6 +22,8 @@
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>화재경보음을 인식하기 위해 필요합니다.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>현위치 신고를 위해 필요합니다.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>NanumGothicBold.otf</string>
